UI enhancements, delete method working

--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,41 @@
+h1 {
+    width: 100%;
+    text-align: center;
+    margin-top: 10%;
+    font-family: 'Sarabun', sans-serif;
+}
+
+p {
+    width: 100%;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    font-size: 120%
+}
 
 
+input {
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 2%;
+    margin-bottom: 1%;
+    font-family: 'Roboto', sans-serif;
+}
+
+#carsListButton {
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-bottom: 5%;
+}
+
+.MuiFormControl-root-1{
+    width: 100%;
+}
+
+.table {
+    width: 80%;
+    text-align: center;
+    margin-left: 10%;
+    margin-right: 10%;
+}
